force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <description>表示某位面试官对某位候选人的评价</description>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>